--- a/playstore.css
+++ b/playstore.css
@@ -10,7 +10,7 @@
 .head-div{
     display: flex;
     align-items: center;
-    gap: 3rem;
+    gap: 5rem;
     position: sticky;
 }
 
@@ -20,8 +20,8 @@
 }
 
 .head-icons{
-    gap: 3rem;
-    margin-left: 5rem;
+    gap: 7rem;
+    margin-left: 10rem;
     padding-left: 5rem;
 }
 
@@ -41,6 +41,7 @@
 
 .button{
     background-color: white;
+   
    
     
 }
@@ -66,6 +67,7 @@
     gap: 1rem;
     padding-top: 2rem;
     margin-top: 3rem;
+    
 }
 .row-2{
     display: flex;
@@ -98,6 +100,7 @@
 .images{
     margin-left: 1.6rem;
     gap: 1rem;
+    align-items: center;
 }
 
 .img{
